--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,7 @@ six==1.16.0
 smmap==5.0.0
 stack-data==0.6.2
 streamlit==1.16.0
+streamlit_webrtc
 tensorboard==2.11.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
