--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,26 @@
 absl-py==1.4.0
+aioice==0.7.6
+aiortc==1.3.2
 altair==4.2.0
 asttokens==2.2.1
 attrs==22.2.0
+av==9.2.0
 backcall==0.2.0
 blinker==1.5
 cachetools==5.2.1
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
 comm==0.1.2
 commonmark==0.9.1
 contourpy==1.0.6
+cryptography==38.0.4
 cycler==0.11.0
 debugpy==1.6.5
 decorator==5.1.1
+dnspython==2.2.1
 entrypoints==0.4
 executing==1.2.0
 fonttools==4.38.0
@@ -22,6 +28,7 @@ gitdb==4.0.10
 GitPython==3.1.30
 google-auth==2.16.0
 google-auth-oauthlib==0.4.6
+google-crc32c==1.5.0
 grpcio==1.51.1
 idna==3.4
 importlib-metadata==6.0.0
@@ -40,6 +47,7 @@ MarkupSafe==2.1.1
 matplotlib==3.6.3
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
+netifaces==0.11.0
 numpy==1.24.1
 oauthlib==3.2.2
 opencv-python==4.7.0.68
@@ -56,8 +64,11 @@ pure-eval==0.2.2
 pyarrow==10.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.21
 pydeck==0.8.0
+pyee==9.0.4
 Pygments==2.14.0
+pylibsrtp==0.7.1
 Pympler==1.0.1
 pyparsing==3.0.9
 PyQt5==5.15.7
@@ -76,11 +87,12 @@ rsa==4.9
 scipy==1.10.0
 seaborn==0.12.2
 semver==2.13.0
+SimpleCV==1.3
 six==1.16.0
 smmap==5.0.0
 stack-data==0.6.2
 streamlit==1.16.0
-streamlit_webrtc
+streamlit-webrtc==0.44.2
 tensorboard==2.11.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
